feat(bootstrap):used bootstrap. Created filter

--- a/article.html
+++ b/article.html
@@ -2,45 +2,50 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./images/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style-header.css">
     <link rel="stylesheet" href="style-article.css">
-    <link rel="stylesheet" href="./images/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px|Limelight|Merriweather|Pacifico" rel="stylesheet">
     <script src="script.js"></script>
     <title> IIOT </title>
 </head>
 <body>
 <header>
-    <div class="topbar">
-        <div class="logo-container">
-            <a class="home-button" href="index.html">
-                <img class="logo" src="./images/logo.png"/>
-            </a>
-        </div>
-        <div class="title-container">
-            <div class="title">IIOT</div>
-        </div>
-        <div class="filter-container">
-            <div class="filter fa fa-filter fa-4x" aria-hidden="true"></div>
+    <div class="container-fluid">
+        <div class="page-header row">
+            <div class=" col-xs-3">
+                <a href="index.html">
+                    <img class="img-responsive center-block img-circle logo" src="./images/logo.png"/>
+                </a>
+            </div>
+            <div class="col-xs-6 text-center">
+                <div class="title">IIOT</div>
+            </div>
+            <div class="col-xs-3 text-center">
+                <button type="button" class="btn btn-default btn-lg" aria-label="Center Align">
+                    <span class="fa fa-filter fa-2x"></span>
+                </button>
+            </div>
         </div>
     </div>
 </header>
 
 <div class="article-descp">
-    <div class="article-header clearfix">
-        <div class="article-img-container">
-            <img class="article-img" src="./images/author_img.jpg"/>
+    <div class="media article-header">
+        <div class="media-left media-middle">
+            <img class="media-object img-circle article-img" src="./images/author_img.jpg"/>
         </div>
-        <div class="article-details-container">
-            <h1 class="article-title">
+        <div class="media-body">
+            <h2 class="media-heading article-title">
                 Article Title Article Title Article Title Article Title Article Title
-            </h1>
-            <h2 class="article-author">
-                Article Author
             </h2>
-            <h3 class="article-date">
-                MM/DD/YYYY
+            <h3 class="media-heading article-author">
+                Article Author
             </h3>
+            <h4 class="media-heading article-date">
+                MM/DD/YYYY
+            </h4>
         </div>
     </div>
     <div class="article-data-container">
@@ -49,4 +54,5 @@
         </div>
     </div>
 </div>
+
 </body>
