chore(documentation): changed directory structure

--- a/app/article/article.html
+++ b/app/article/article.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./images/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../resources/icons/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="style-header.css">
+    <link rel="stylesheet" href="../style-header.css">
     <link rel="stylesheet" href="style-article.css">
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px|Limelight|Merriweather|Pacifico" rel="stylesheet">
     <script src="script.js"></script>
@@ -15,8 +15,8 @@
     <div class="container-fluid">
         <div class="page-header row">
             <div class=" col-xs-3">
-                <a href="index.html">
-                    <img class="img-responsive center-block img-circle logo" src="./images/logo.png"/>
+                <a href="../index.html">
+                    <img class="img-responsive center-block img-circle logo" src="../resources/images/logo.png"/>
                 </a>
             </div>
             <div class="col-xs-6 text-center">
@@ -34,7 +34,7 @@
 <div class="article-descp">
     <div class="media article-header">
         <div class="media-left media-middle">
-            <img class="media-object img-circle article-img" src="./images/author_img.jpg"/>
+            <img class="media-object img-circle article-img" src="../resources/images/author_img.jpg"/>
         </div>
         <div class="media-body">
             <h2 class="media-heading article-title">
