--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./images/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./resources/icons/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style-header.css">
     <link rel="stylesheet" href="style-main.css">
@@ -16,7 +16,7 @@
         <div class="page-header row">
             <div class=" col-xs-3">
                 <a href="index.html">
-                    <img class="img-responsive center-block img-circle logo" src="./images/logo.png"/>
+                    <img class="img-responsive center-block img-circle logo" src="./resources/images/logo.png"/>
                 </a>
             </div>
             <div class="col-xs-6 text-center">
@@ -38,7 +38,7 @@
                 <div class="container-fluid panel panel-default">
                     <div class="row panel-heading">
                         <div class="col-xs-4 col-md-3">
-                            <img class="img-responsive img-circle center-block author-img" src="./images/author_img.jpg"/>
+                            <img class="img-responsive img-circle center-block author-img" src="./resources/images/author_img.jpg"/>
                         </div>
                         <div class="col-xs-8 col-md-9 panel-title details">
                             <h4 class="artTitle">
@@ -59,7 +59,7 @@
 
                     <div class="row panel-footer">
                         <div class="col-xs-6">
-                            <a href="article.html" class="readmore">
+                            <a href="./article/article.html" class="readmore">
                                 More
                             </a>
                         </div>
@@ -76,7 +76,7 @@
                 <div class="container-fluid panel panel-default">
                     <div class="row panel-heading">
                         <div class="col-xs-4 col-md-3">
-                            <img class="img-responsive img-circle center-block author-img" src="./images/author_img.jpg"/>
+                            <img class="img-responsive img-circle center-block author-img" src="./resources/images/author_img.jpg"/>
                         </div>
                         <div class="col-xs-8 col-md-9 panel-title details">
                             <h4 class="artTitle">
@@ -97,7 +97,7 @@
 
                     <div class="row panel-footer">
                         <div class="col-xs-6">
-                            <a href="article.html" class="readmore">
+                            <a href="./article/article.html" class="readmore">
                                 More
                             </a>
                         </div>
@@ -114,7 +114,7 @@
                 <div class="container-fluid panel panel-default">
                     <div class="row panel-heading">
                         <div class="col-xs-4 col-md-3">
-                            <img class="img-responsive img-circle center-block author-img" src="./images/author_img.jpg"/>
+                            <img class="img-responsive img-circle center-block author-img" src="./resources/images/author_img.jpg"/>
                         </div>
                         <div class="col-xs-8 col-md-9 panel-title details">
                             <h4 class="artTitle">
@@ -135,7 +135,7 @@
 
                     <div class="row panel-footer">
                         <div class="col-xs-6">
-                            <a href="article.html" class="readmore">
+                            <a href="./article/article.html" class="readmore">
                                 More
                             </a>
                         </div>
@@ -152,7 +152,7 @@
                 <div class="container-fluid panel panel-default">
                     <div class="row panel-heading">
                         <div class="col-xs-4 col-md-3">
-                            <img class="img-responsive img-circle center-block author-img" src="./images/author_img.jpg"/>
+                            <img class="img-responsive img-circle center-block author-img" src="./resources/images/author_img.jpg"/>
                         </div>
                         <div class="col-xs-8 col-md-9 panel-title details">
                             <h4 class="artTitle">
@@ -173,7 +173,7 @@
 
                     <div class="row panel-footer">
                         <div class="col-xs-6">
-                            <a href="article.html" class="readmore">
+                            <a href="./article/article.html" class="readmore">
                                 More
                             </a>
                         </div>
@@ -188,27 +188,6 @@
         </div>
     </div>
 </div>
-
-<!--<div class="filter-container">-->
-<!--<div class="list-group filter">-->
-<!--<button type="button" class="list-group-item filter-head">Filter</button>-->
-<!--<button type="button" class="list-group-item year"> <span class="caret"></span> 2016</button>-->
-<!--<ul class="month">-->
-<!--<button type="button" class="list-group-item">DEC</button>-->
-<!--<button type="button" class="list-group-item">NOV</button>-->
-<!--<button type="button" class="list-group-item">OCT</button>-->
-<!--<button type="button" class="list-group-item">SEP</button>-->
-<!--<button type="button" class="list-group-item">AUG</button>-->
-<!--<button type="button" class="list-group-item">JUL</button>-->
-<!--<button type="button" class="list-group-item">JUN</button>-->
-<!--<button type="button" class="list-group-item">MAY</button>-->
-<!--<button type="button" class="list-group-item">APR</button>-->
-<!--<button type="button" class="list-group-item">MAR</button>-->
-<!--<button type="button" class="list-group-item">FEB</button>-->
-<!--<button type="button" class="list-group-item">JAN</button>-->
-<!--</ul>-->
-<!--</div>-->
-<!--</div>-->
 
 <aside class="filter-container">
     <ul class="tree">
